Only publish files under dist

--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "publishConfig": {
     "access": "public"
   },
+  "files": [
+    "dist"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/chrom-ar/courier.git"
