--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@eslint/js": "^9.23.0",
     "eslint": "^9.23.0",
     "globals": "^16.0.0",
+    "jiti": "^2.4.2",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.29.0"
   }
